@@ -11,6 +11,7 @@ Full release notes:
 v9.4.0
 ======
 
+- WL#16963: Update the OpenTelemetry version
 - WL#16962: Update the Python Protobuf version
 - BUG#37820231: Text based django ORM filters doesn't work with Connector/Python
 - BUG#37806057: Rename extra option (when installing wheel package) to install webauthn functionality dependencies
